--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node --env-file=.env src/index.js",
-		"dev": "npx nodemon --env-file=.env src/index.js"
+		"dev": "npx nodemon --env-file=.env src/index.js",
+		"build": "prisma generate && npm run start",
+		"lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+		"format": "prettier --write ."
 	},
 	"author": "",
 	"license": "ISC",
@@ -21,6 +24,7 @@
 	},
 	"devDependencies": {
 		"eslint": "^8.55.0",
+		"prettier": "3.1.1",
 		"prisma": "^5.7.0"
 	}
 }
